--- a/about-page.html
+++ b/about-page.html
@@ -66,24 +66,32 @@
 <div class="container-fluid text-center">    
   <div class="row content">
     <div class="col-sm-2 sidenav">
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
     </div>
     <div class="col-sm-8 text-left"> 
-      <h1>Welcome</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <h1>About the Healthy World Map</h1>
       <hr>
-      <h3>Test</h3>
-      <p>Lorem ipsum...</p>
+      <h3>Our Vision</h3>
+      <p>In a time when world health is taken into heavy consideration having easy and convenient access to world health information should be a must. We created Healthy World Map
+      to allow everyone to have access to this information quickly and easily. Our vision is to allow those travelling to other countries, moving to other countries or anyone
+      in need of this kind of data an easy place to access and visualize it with just a few clicks. </p>
+      <p>When using the World Healthy Map all that needs to be done is simply select the Continent you are interested in learning about and select the type of data you wish to visualize.
+      You will be presented with a graph showing comparisons of each country in the continent you selected!</p>
+      <h3>Looking Toward the Future</h3>
+      <p>If future development of this project were to continue we would like to widen our scope and increase the detail of what can be visualized. One of our goals would be the visualization of specific
+      countries as well as other features like comparing two or more specific countries or countries from other continents together.</p>
+      <h3>Data Sources</h3>
+      <p>All data sources are gathered from the World Health Organization, link below<br>
+        <a href="https://ourworldindata.org/">World Health Organization Website</a></p>
+      <h3>Our Team</h3>
+      <p>Daniel Correa-Lopez<br>
+      Dylan Goodman<br>
+      Luke Simone<br>
+      Colin Speer</p>
+      <h3>Source Code</h3>
+      <p>A link to our Github repository is shown below<br>
+      <p><a href="https://github.com/dlopez144/final-project-ITSC3155">Source Code</a></p></p>
     </div>
     <div class="col-sm-2 sidenav">
-      <div class="well">
-        <p>ADS</p>
-      </div>
-      <div class="well">
-        <p>ADS</p>
-      </div>
     </div>
   </div>
 </div>
