--- a/map-page.html
+++ b/map-page.html
@@ -13,7 +13,8 @@
   <script src="./resources/jquery-jvectormap-continents-mill.js"></script>
   <script>
     $(function(){
-      $('#map').vectorMap({ // setting up the map
+      var map = new jvm.Map({ // setting up the map
+        container: $('#map'),
           map: 'continents_mill', 
           backgroundColor : 'rgb(240, 248, 255)',
           regionStyle : {
@@ -33,9 +34,22 @@
                 },
                 selectedHover: {
                 }
+            },
+            onRegionClick:function(event, code) { // callback function
+              var dict = {
+                "NA" : "north-america",
+                "SA" : "south-america",
+                "AS" : "asia",
+                "EU" : "europe",
+                "OC" : "oceania",
+                "AF" : "africa"
+              }
+              // TEMPORARY REDIRECT
+              window.location.replace("./graphs/" + dict[code] + "/" + dict[code] + "-sanitation.html")
             }
         });
     })
+
   </script>
   <style>
 
