adding modifications for html merging

--- a/map-page.html
+++ b/map-page.html
@@ -45,7 +45,7 @@
                 "AF" : "africa"
               }
               // TEMPORARY REDIRECT
-              window.location.replace("./graphs/" + dict[code] + "/" + dict[code] + "-sanitation.html")
+              window.location.replace("./graphs/" + dict[code] + "/" + dict[code] + "-sanitation_nav.html")
             }
         });
     })
