Added Image resource directory, tentative homepage design and Map page text for demo

--- a/pages/map-page.html
+++ b/pages/map-page.html
@@ -114,7 +114,7 @@
   </div>
 </nav>
   
-<h1 style="text-align: center;">Select a continent (could someone make this text look good?)</h1>
+<h1 style="text-align: center;">Select the continent you would like to visualize data for</h1>
 &nbsp;&nbsp;&nbsp;
 <div class="container-fluid text-center">    
     <div id="map" style="width: 1910px; height: 700px"></div>
@@ -128,7 +128,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title" style="text-align: center;">What data are you interested in? //someone come up with a better title pls</h4>
+        <h4 class="modal-title" style="text-align: center;">Please select the type of data you would like to visualize:</h4>
       </div>
       <div class="container" style="text-align: center;width: 300px;margin: 0 auto;">
         &nbsp;&nbsp;&nbsp;
