--- a/home-page.html
+++ b/home-page.html
@@ -13,6 +13,16 @@
       margin-bottom: 0;
       border-radius: 0;
     }
+
+    /* to delete image delete all code from body{} */
+    body{
+      background-image:linear-gradient(rgba(255,255,255,0.75), rgba(255,255,255,0.75)), url("Images/map-home5.png");
+      background-repeat: no-repeat;
+      background-position-y: bottom;
+      background-size: 100% 87.5%;
+      background-position-x: right;
+    }
+
     
     /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
     .row.content {height: 1000px}
@@ -42,7 +52,6 @@
   </style>
 </head>
 <body>
-
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -63,27 +72,17 @@
   </div>
 </nav>
 
-<div class="container-fluid text-center">    
+<div class="container-fluid text-center">
   <div class="row content">
     <div class="col-sm-2 sidenav">
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
     </div>
     <div class="col-sm-8 text-left"> 
-      <h1>Welcome</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <h1>Welcome to the Healthy World Map</h1>
       <hr>
-      <h3>Test</h3>
-      <p>Lorem ipsum...</p>
+      <h3>Learning more about world health is just a few clicks away!</h3>
+      <p>Navigate to the maps page to get started</p>
     </div>
     <div class="col-sm-2 sidenav">
-      <div class="well">
-        <p>ADS</p>
-      </div>
-      <div class="well">
-        <p>ADS</p>
-      </div>
     </div>
   </div>
 </div>
