modified team names, added sources to every dataset used

--- a/pages/about-page.html
+++ b/pages/about-page.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Bootstrap Example</title>
+  <title>About - Healthy World Map</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -92,10 +92,16 @@
           countries as well as other features like comparing two or more specific countries or countries from other
           continents together.</p>
         <h3>Data Sources</h3>
-        <p>All data sources are gathered from the <a href="https://ourworldindata.org/">World Health Organization</a>
+        <p>All data sources are gathered from the <a href="https://ourworldindata.org/">World Health Organization</a> and <a href="https://ourworldindata.org/">Our World in Data</a>
         </p>
+        <ul>
+          <li>Air Pollution Data - <a href="https://www.who.int/data/gho/data/indicators/indicator-details/GHO/concentrations-of-fine-particulate-matter-(pm2-5)">"SDG Indicator 11.6.2 Concentrations of fine particulate matter (PM2.5)"</a></li>
+          <li>Sanitation Data - <a href="https://www.who.int/data/gho/data/themes/topics/sdg-target-6-ensure-availability-and-sustainable-management-of-water-and-sanitation-for-all">"Population using safely managed sanitation services (%)"</a></li>
+          <li>Clean Water Data - <a href="https://www.who.int/data/gho/data/themes/topics/sdg-target-6-ensure-availability-and-sustainable-management-of-water-and-sanitation-for-all">"Proportion of population using safely managed drinking water services (%)"</a></li>
+          <li>Vaccination Rates - <a href="https://ourworldindata.org/covid-vaccinations#source-information-country-by-country">"Share of people vaccinated against COVID-19, Dec 3, 2021"</a></li>
+        </ul>
         <h3>Our Team</h3>
-        <p>Daniel Correa-Lopez<br>
+        <p>Daniel Lopez Correa<br>
           Dylan Goodman<br>
           Luke Simone<br>
           Colin Speer</p>
