Small changes to home page

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
     /* to delete image delete all code from body{} */
     body{
-      background-image:linear-gradient(rgba(255,255,255,0.75), rgba(255,255,255,0.75)), url("Images/map-home5.png");
+      background-image:linear-gradient(rgba(255,255,255,0.4), rgba(255,255,255,0.4)), url("Images/map-home3.png");
       background-repeat: no-repeat;
       background-position-y: bottom;
-      background-size: 100% 87.5%;
+      background-size: 100% 85%;
       background-position-x: right;
       /* might want to keep the bot line if you go with the minimal ver*/
       /*background-size: cover; */
@@ -39,9 +39,9 @@
       padding-top:20px;
       padding-bottom:20px;
       width:100%;
-      background-color:#6495ED;
+      background-color:#e3b1b1;
       color:rgb(240, 248, 255);
-      border-color: #6495ED;
+      border-color: #e3b1b1;
     }
 
     .center {
@@ -91,10 +91,10 @@
     <div class="col-sm-2 sidenav">
     </div>
     <div class="col-sm-8 text-left" style="text-align: center;"> 
-      <h1>Welcome to the Healthy World Map</h1>
+      <h1 style="font-size:60px">Welcome to the Healthy World Map</h1>
       <hr>
-      <h3>Learning more about world health is just a few clicks away!</h3>
-      <p>Navigate to the maps page to get started</p>
+      <h2>Learning more about world health is just a few clicks away!</h2>
+      <h3>Navigate to the maps page to get started</h3>
     </div>
     <div class="col-sm-2 sidenav">
     </div>
